--- a/js/css.css
+++ b/js/css.css
@@ -68,6 +68,7 @@ body {
     height:130px;
     width:500px;
     padding:30px;
+    padding-top: 50px;
   }
   
   .playControls {
@@ -84,6 +85,10 @@ body {
   #slower {
     margin-left: 30px;
   }
+
+  /* .arrowSpot {
+      position: absolute;
+  } */
 
   /* builder */
   #ballSelect {
