--- a/css.css
+++ b/css.css
@@ -6,55 +6,59 @@ body {
 /* page */
 .pageElement {
     float:left;
-  }
-  .pageButton {
-    background-image:  linear-gradient(rgb(44, 64, 73),rgb(130, 192, 211));
-    background-repeat: no-repeat;
-    color:white;
-    font-variant-caps: petite-caps;
-    font-weight: 700;
-    font-size: large;
-    border-radius: 10px;
-  }
+}
 
-  /* common */
-  .tube {
-    width:32px;
-    height:140px;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 40px;
-    margin-top: 180px;
-    position:absolute;
-    background-image: url("images/tubetopbg.png"),url("images/tubebottombg.png"),url("images/tubemidbg.png");
-    background-position: top, bottom, center;
-    background-repeat: no-repeat, no-repeat, repeat-y;
-  }
+.pageButton {
+  background-image:  linear-gradient(rgb(44, 64, 73),rgb(130, 192, 211));
+  background-repeat: no-repeat;
+  color:white;
+  font-variant-caps: petite-caps;
+  font-weight: 700;
+  font-size: large;
+  border-radius: 10px;
+}
 
-  .ball {
-    width: 30px;
-    border-radius: 15px;
-    height:30px;
-    /* can't remove border or else you can't see the white. */
-    border: 1px solid rgb(133, 131, 131);
-    margin-bottom: 1px;      
-    position:absolute;
-  }
+/* common */
+.tube {
+  width:32px;
+  height:140px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 40px;
+  float: left;
+  /* margin-top: 180px; */
+  margin-bottom: 10px;
+  /* position:absolute; */
+  background-image: url("images/tubetopbg.png"),url("images/tubebottombg.png"),url("images/tubemidbg.png");
+  background-position: top, bottom, center;
+  background-repeat: no-repeat, no-repeat, repeat-y;
 
-  .tube .ball {
-      margin-bottom: 10px;
-  }
-      
-  button {
-    max-width: 200;
-    background-image:  linear-gradient(rgb(44, 64, 73),rgb(79, 147, 168) 80%);
-    background-repeat: no-repeat;
-    color:white;
-    border-radius: 10px;
-    font-variant-caps: petite-caps;
-    font-weight: 700;
-    font-size:100%;
-  }
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: column;
+}
+
+.ball {
+  width: 30px;
+  border-radius: 15px;
+  height:30px;
+  /* can't remove border or else you can't see the white. */
+  border: 1px solid rgb(133, 131, 131);
+  margin-bottom: 1px;      
+  /* position:absolute; */
+}
+
+    
+button {
+  max-width: 200;
+  background-image:  linear-gradient(rgb(44, 64, 73),rgb(79, 147, 168) 80%);
+  background-repeat: no-repeat;
+  color:white;
+  border-radius: 10px;
+  font-variant-caps: petite-caps;
+  font-weight: 700;
+  font-size:100%;
+}
 
 .title {
     font-size: larger;
@@ -69,51 +73,52 @@ body {
     margin-bottom: 10px;
 }
 
-    /* solver */
-  
-    #display {
-    height:130px;
-    width:500px;
-    padding:30px;
-    padding-top: 50px;
-  }
-  
-  .playControls {
-    visibility: hidden;
-    background-color: lime;
-    background-image:  linear-gradient(rgb(130, 160, 184), rgb(15, 28, 63));
-    background-repeat: no-repeat;
-    color:white;
-    border-radius: 10px;
-    font-weight: 500;
-    font-size: 80%;
-  }
+  /* solver */
 
-  #slower {
-    margin-left: 30px;
-  }
+#display {
+  display: flex;
+  height:210px;
+  /* width:500px; */
+  padding:30px;
+  padding-top: 50px;
+}
+
+.playControls {
+  visibility: hidden;
+  background-color: lime;
+  background-image:  linear-gradient(rgb(130, 160, 184), rgb(15, 28, 63));
+  background-repeat: no-repeat;
+  color:white;
+  border-radius: 10px;
+  font-weight: 500;
+  font-size: 80%;
+}
+
+#slower {
+  margin-left: 30px;
+}
 
 
-  /* builder */
-  #ballSelect {
-    position:relative;
-    height:36px;
-    padding-left: 30px;
-    padding-top: 30px;
-  }
+/* builder */
+#ballSelect {
+  position:relative;
+  height:36px;
+  padding-left: 30px;
+  padding-top: 30px;
+}
 
-  #ballSelect .ball {
-    position:relative;
-    float:left;
-  }
+#ballSelect .ball {
+  position:relative;
+  float:left;
+}
 
-  #clearBall {
-      background-image: url('images/clear.png');
-  }
+#clearBall {
+    background-image: url('images/clear.png');
+}
 
-  #output {
-    position:relative;
-    font-size: large;
-    padding-left: 30px;
-    top:200px;
-  }
+#output {
+  position:relative;
+  font-size: large;
+  padding-left: 30px;
+  top:200px;
+}
