--- a/css.css
+++ b/css.css
@@ -24,6 +24,7 @@ body {
   height:140px;
   padding-left: 10px;
   padding-right: 10px;
+  padding-bottom: 10px;
   padding-top: 40px;
   float: left;
   /* margin-top: 180px; */
@@ -101,16 +102,17 @@ button {
 
 /* builder */
 #ballSelect {
-  position:relative;
+  /* position:relative; */
+
   height:36px;
   padding-left: 30px;
   padding-top: 30px;
 }
 
 #ballSelect .ball {
-  position:relative;
+  /* position:relative; */
   float:left;
-}
+} 
 
 #clearBall {
     background-image: url('images/clear.png');
@@ -121,4 +123,9 @@ button {
   font-size: large;
   padding-left: 30px;
   top:200px;
+}
+
+#builderTubeDisplay {
+  /* float: right; */
+  width: 312px;
 }
